--- a/sglab/layouts/partials/header.html
+++ b/sglab/layouts/partials/header.html
@@ -3,7 +3,7 @@
     <p>We specialize in blablabla</p>
   </div>
 
-<div class="container-fluid">
+<div id="about" class="container-fluid">
   <div class="row">
     <div class="col-sm-8">
       <h2>About SG Lab</h2>
@@ -17,24 +17,24 @@
 </div>
 
 <div class="container-fluid text-center bg-grey">
-  <h2>RESEARCH AREAS</h2>
+  <h2>OBJECTIVES</h2>
   <h4>What we offer</h4>
   <br>
   <div class="row">
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-off logo-small"></span>
-      <h4>POWER</h4>
-      <p>Lorem ipsum dolor sit amet..</p>
+      <h4>INNOVATE</h4>
+      <p>Reimagining Healthcare with Artificial Intelligence</p>
     </div>
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-heart logo-small"></span>
-      <h4>LOVE</h4>
-      <p>Lorem ipsum dolor sit amet..</p>
+      <h4>DISCOVER</h4>
+      <p>Unlocking New Possibilities with AI</p>
     </div>
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-lock logo-small"></span>
-      <h4>JOB DONE</h4>
-      <p>Lorem ipsum dolor sit amet..</p>
+      <h4>EMPOWER</h4>
+      <p>Guiding Through Research and Development</p>
     </div>
     </div>
     <br><br>
