--- a/sglab/layouts/partials/team.html
+++ b/sglab/layouts/partials/team.html
@@ -1,4 +1,4 @@
-<div class="container-fluid text-center bg-grey">
+<div id="team" class="container-fluid text-center bg-grey">
   <h3>OUR TEAM</h3>
   <p><em>We love music!</em></p>
   <p>We have created a fictional band website. Lorem ipsum..</p>
