--- a/sglab/layouts/partials/project.html
+++ b/sglab/layouts/partials/project.html
@@ -1,4 +1,4 @@
-<div class="container-fluid text-center">
+<div id="projects" class="container-fluid text-center">
   <h2>Projects</h2>
   <h4>What we have created</h4>
   
